# nonebot-plugin-oddtext

./: README.md  pyproject.toml
nonebot_plugin_oddtext/: __init__.py  data_source.py
